@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-24T16:25:39Z",
+  "timestamp" : "2022-07-25T08:26:07Z",
   "count_outdated" : 2276,
   "uniques_outdated" : 503,
   "count" : 2319,
-  "uniques" : 528,
+  "uniques" : 529,
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -81,6 +81,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
